Switches to Vite, integrates ESLint and performs improvements on structure.

--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -19,7 +19,7 @@
 }
 
 .animatePullRelease {
-  animation: pullAndRelease .8s ease-out forwards;
+  animation: pullAndRelease 0.8s ease-out forwards;
   transform-box: fill-box;
   transform-origin: left center;
 }
